--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <iframe src="https://bharat-sme-frontend-2e30a20b9795.herokuapp.com/" width="100%" height="100%" frameborder="0"></iframe>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
